# how

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  bin.rs  main.rs
scripts/: install  start
test/: hello.md
