[package]
name = "how"
version = "1.0.0"
description = "How(1) - how to do anything"
keywords = ["how","anything","cli","help","unix","linux","platform","tutorial"]

[lib]
name = "how"
path = "main.rs"

[[bin]]
name = "how"
path = "bin/cli.rs"

[dependencies]
getopts="0.2.14"
pulldown-cmark = "0.0.5"
